syntax = "proto3";

package demo;

option go_package = "practicum-url-reduction-app/proto";

// The request message containing the URL ID
message GetURLByIDRequest {
  string url_id = 1;
}

// The response message containing the URL
message GetURLByIDResponse {
  string url = 1;
  string error = 2;
}

// The request message containing the user ID
message GetAllByUserIDRequest {
  string user_id = 1;
}

// The response message containing the list of URLs
message GetAllByUserIDResponse {
  repeated FullURL full_urls = 1;
  string error = 2;
}

message FullURL {
  string short_url = 1;
  string original_url = 2;
}

// The request message containing the user ID and URL
message ReduceAndSaveURLRequest {
  string user_id = 1;
  string url = 2;
}

// The response message containing the shortened URL
message ReduceAndSaveURLResponse {
  string short_url = 1;
  string error = 2;
}

message ReduceURLToJSONRequest {
  string user_id = 1;
  URLRequest url_request = 2;
}

// The response message containing the result
message ReduceURLToJSONResponse {
  URLResponse url_response = 1;
  string error = 2;
}

message URLRequest {
  string url = 1;
}

message URLResponse {
  string result = 1;
}

// The request message containing the user ID and list of URLs
message ReduceSeveralURLRequest {
  string user_id = 1;
  repeated URLWithIDRequest url_with_id_requests = 2;
}

// The response message containing the list of URLs with IDs
message ReduceSeveralURLResponse {
  repeated URLWithIDResponse url_with_id_responses = 1;
  string error = 2;
}

message URLWithIDRequest {
  string correlation_id = 1;
  string original_url = 2;
}

message URLWithIDResponse {
  string correlation_id = 1;
  string short_url = 2;
}

message RemoveAllRequest {
  string user_id = 1;
  repeated string removing_list = 2;
}

// The response message containing the error
message RemoveAllResponse {
  string error = 1;
}

message PingConnectionRequest {
}

// The response message containing the error
message PingConnectionResponse {
  string error = 1;
}

message GetStatsRequest {
}

// The response message containing the stats
message GetStatsResponse {
  Stats stats = 1;
  string error = 2;
}

message Stats {
  int64 urls = 1;
  int64 users = 2;
}

// URLs service
service URLs {
  rpc GetURLByID (GetURLByIDRequest) returns (GetURLByIDResponse);
  rpc GetAllByUserID (GetAllByUserIDRequest) returns (GetAllByUserIDResponse);
  rpc ReduceAndSaveURL (ReduceAndSaveURLRequest) returns (ReduceAndSaveURLResponse);
  rpc ReduceURLToJSON (ReduceURLToJSONRequest) returns (ReduceURLToJSONResponse);
  rpc ReduceSeveralURL (ReduceSeveralURLRequest) returns (ReduceSeveralURLResponse);
  rpc RemoveAll (RemoveAllRequest) returns (RemoveAllResponse);
  rpc PingConnection (PingConnectionRequest) returns (PingConnectionResponse);
  rpc GetStats (GetStatsRequest) returns (GetStatsResponse) {};

}